--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-joblib==1.0.1
-numpy==1.20.2
-pandas==1.2.4
-Pillow==8.2.0
-scikit-learn==1.1.3
-scipy
-streamlit
-
+joblib==1.2.0
+joblib==1.3.2
+numpy==1.23.5
+numpy==1.25.2
+pandas==2.2.1
+scikit_learn==1.2.2
+streamlit==1.33.0
